# servery

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
benchmarks/: __init__.py  _apps.py  _harness.py  _http3_client.py  conftest.py  test_bench_http1.py  test_bench_http3.py  test_bench_internals.py  test_bench_secure.py
docs/: ARCHITECTURE.md  BEST-PRACTICES.md  DYNAMIC.md  PRINCIPLES.md  REFERENCES.md  REQUIREMENTS.md  ROADMAP.md  STANDARDS.md  TRANSPORTS.md  VISION.md  getting-started.md  index.md  recipes.md
docs/design/: acme.md  gzip.md  integrity-digests.md  lan-share.md  resumable-upload.md  tftp.md  webdav.md  zstd.md
docs/extending/: apps.md  library.md
docs/guide/: https.md  lan.md  protocols.md  serving.md  uploads.md  web.md  webdav.md
docs/reference/: cli.md
scripts/: abdriver.py  amalgamate.py  bench.py  bundle.sh  check_zero_deps.py  loadgen.py  microbench.py  run_benchmarks.sh  scan_tls.sh
src/servery/: __init__.py  __main__.py  _accesslog.py  _acme.py  _appspec.py  _certgen.py  _compress.py  _conditional.py  _digest.py  _extract.py  _http1.py  _log.py  _mdns.py  _netinfo.py  _oscrypto.py  _proxy.py  _qr.py  _response.py  _resumable.py  _tftp.py  _tls.py  _version.py  _webdav.py  _websocket.py  archive.py  asgi.py  auth.py  cgi.py  cli.py  config.py  handler.py  http3.py  listing.py  ranges.py  security.py  server.py  upload.py  wsgi.py
src/servery/http2/: __init__.py  connection.py  frames.py  hpack.py
tests/: _asgiapp.py  _harness.py  _wsgiapp.py  test_accesslog.py  test_acme.py  test_archive.py  test_asgi.py  test_auth.py  test_cgi.py  test_compress.py  test_digest.py  test_extract.py  test_h2frames.py  test_handler_helpers.py  test_hpack.py  test_http1_conformance.py  test_http2_conformance.py  test_http2_server.py  test_http3.py  test_listing.py  test_mdns.py  test_netinfo.py  test_oscrypto.py  test_performance.py  test_profiles.py  test_proxy.py  test_qr.py  test_ranges.py  test_request_parsing.py  test_response.py  test_resumable.py  test_security.py  test_security_regression.py  test_server.py  test_smoke.py  test_tftp.py  test_tls.py  test_upload.py  test_upload_robustness.py  test_webdav.py  (+1 more)
