[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servery"
version = "1.0.0"
description = "Zero-dependency, batteries-included pure-Python HTTP file server."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michael Bommarito" }]
keywords = ["http", "server", "fileserver", "static", "stdlib", "zero-dependency"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]

# The defining constraint of this project: ZERO third-party runtime
# dependencies. This list MUST stay empty forever (enforced by the
# scripts/check_zero_deps.py CI gate). Dev tooling lives in
# [dependency-groups] below and never ships in the wheel.
dependencies = []

[project.urls]
Homepage = "https://github.com/mjbommar/servery"
Repository = "https://github.com/mjbommar/servery"
Issues = "https://github.com/mjbommar/servery/issues"

# Optional protocol tier. The CORE stays zero-dependency; HTTP/3 (QUIC) needs
# crypto the stdlib lacks, so it is opt-in via the reference QUIC stack.
[project.optional-dependencies]
http3 = ["aioquic>=1.0"]

[project.scripts]
servery = "servery.cli:main"

[dependency-groups]
# Development / CI tooling only. Isolated from runtime; never published.
dev = [
  "ruff>=0.6",
  "bandit[toml]>=1.7",
  "coverage>=7.5",
  "build>=1.2",
  "twine>=5.0",
  "pre-commit>=3.7",
  # Interop-only: an independent client to cross-check the server (HTTP/1.1 + 2).
  # Never a runtime dependency; interop tests skip when it is absent.
  "httpx[http2]>=0.27",
]
# Note: ty (the type checker) is run via `uvx ty` — it is preview-versioned and
# fast-moving, so we pull the latest ephemerally rather than pinning it here.

[tool.hatch.build.targets.wheel]
packages = ["src/servery"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # isort
  "N",             # pep8-naming
  "UP",            # pyupgrade
  "B",             # flake8-bugbear
  "C4",            # flake8-comprehensions
  "SIM",           # flake8-simplify
  "PTH",           # flake8-use-pathlib
  "RET",           # flake8-return
  "PIE",           # flake8-pie
  "PERF",          # perflint
  "FLY",           # flynt
  "A",             # flake8-builtins
  "TRY",           # tryceratops
  "RUF",           # ruff-specific
]
ignore = [
  "TRY003",        # allow longer inline exception messages
  "COM812",        # handled by the formatter
  "ISC001",        # handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["servery"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PERF"]
# The listing module embeds an HTML/CSS template; its lines are data, not code.
"src/servery/listing.py" = ["E501"]
# The handler deliberately works at the os.path level: its security model uses an
# empty-string sentinel for escaped paths, and Path("") resolves to the cwd. It
# also mirrors the stdlib send_head "close-on-error then re-raise" idiom.
"src/servery/handler.py" = ["PTH", "TRY300"]
# The upload module manipulates paths at the os level for filename sanitization
# (basename) and atomic os.replace; pathlib does not improve safety here.
"src/servery/upload.py" = ["PTH"]
# The archive module walks the tree with os.walk + os.path for arcname building.
"src/servery/archive.py" = ["PTH"]
# The HTTP/2 connection resolves paths at the os level (shared with the handler).
"src/servery/http2/connection.py" = ["PTH"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src", "tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
branch = true
source = ["servery"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
